Added "Add room to Namespace" feature

--- a/public/chat.html
+++ b/public/chat.html
@@ -24,7 +24,7 @@
           </div>
         </div>
           <div class="add-room"> 
-            <i class="bi bi-plus-lg"></i>
+            <i class="bi bi-plus-lg add-room-button"></i>
           </div>
         </div>
         <ul class="rooms-list"> 
